<resources>
    <string name="app_name">KopiJiwa</string>
    <string name="edit_outlet">Edit Outlet</string>
    <string name="back">back</string>
    <string name="edit">Edit</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="simpan">SIMPAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skopisjiwa">SkopiSjiwa</string>
    <string name="title_create">Create an \nAccount</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_register">By clicking the <font color="#4F3C03">Register</font> botton, you agree to \nthe public offer</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="user_naufal">Naufal Azmi Wardhana</string>
    <string name="pick_up">Pick Up</string>
    <string name="drive_thru">Drive Thru</string>
    <string name="store">Store</string>
    <string name="choose_store">Choose Store</string>
    <string name="address_template">Jl. Balam No.7, Cakranegara Bar., Kec. Cakranegara, Kota Mataram, Nusa Tenggara Bar. 83239</string>
    <string name="janji_jiwa_template">Janji Jiwa</string>
    <string name="open_template">OPEN</string>
    <string name="open_operational_template">8 AM - 11 PM</string>
    <string name="pick_up_to">Pick up to...</string>
    <string name="small">Small</string>
    <string name="plus">+</string>
    <string name="medium">Medium</string>
    <string name="choose_size">Choose Size</string>
    <string name="caramel_macchitato">Caramel Macchitato</string>
    <string name="sugar_level">Sugar level</string>
    <string name="pick">Pick</string>
    <string name="_1">1</string>
    <string name="one">1</string>
    <string name="available">Available</string>
    <string name="note_restaurant">Note Restaurant</string>
    <string name="optional">optional</string>
    <string name="add_your_request">add your request</string>
    <string name="rp">Rp</string>
    <string name="price_template">30.000</string>
    <string name="new_release">New Release</string>
    <string name="kopi_signature">Kopi Signature</string>
    <string name="non_cofee">Non-Cofee</string>
    <string name="snack">Snack</string>
    <string name="cashier">Cashier</string>
    <string name="status">Status</string>
    <string name="order">Order</string>
    <string name="number">Number</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_sucessfully">Payment Sucessfully!</string>
    <string name="payment_description">We will let you know if your order is ready to take</string>
    <string name="order_number">Order Number</string>
    <string name="pay_date">Pay Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="order_status">Your order is being processed...</string>
    <string name="store_tidak_ditemukan">Store tidak ditemukan</string>
</resources>